<resources>
    <string name="app_name">ConstraintLayoutPlayground</string>
    <string name="biography">Matthias Schoenaerts (born 8 December 1977) is a Belgian actor, film producer and graffiti artist of Flemish origin. He made his film debut at the age of 13 in Daens (1992), which was nominated for the Academy Award for Best Foreign Language Film. He is best known for his roles as Filip in Loft (2008), Jacky Vanmarsenille in the Oscar-nominated Bullhead (2011), Ali in the BAFTA and Golden Globe-nominee Rust and Bone (2012), for which he won the César Award for Most Promising Actor, Eric Deeds in The Drop (2014), Bruno von Falk in Suite Française (2015), Gabriel Oak in Far from the Madding Crowd (2015) and Hans Axgil in The Danish Girl (2015).</string>
    <string name="visit_website">Visit Website</string>
    <string name="image_content_description">Japan Snow monkey is hanging out in a thermal.</string>
    <string name="spread" translatable="false">Spread</string>
    <string name="spread_inside" translatable="false">Spread_Inside</string>
    <string name="packed" translatable="false">Packed</string>
    <string name="chain_modes" translatable="false">Chain Modes</string>
    <string name="bias_02_packed" translatable="false">Bias_0.2_Packed</string>
    <string name="text_view" translatable="false">TextView</string>
    <string name="weighted_text_view" translatable="false">WeightedTextView</string>
    <string name="matthias_schoenaerts" translatable="false">Matthias Schoenaerts</string>
    <string name="linear_layout_orientation_vertical" translatable="false">Vertical</string>
    <string name="linear_layout_orientation_horizontal" translatable="false">Horizontal</string>
    <string name="percent_margin_vertical" translatable="false">Percent Margin Vertical</string>
    <string name="percent_width" translatable="false">Percent Width</string>
    <string name="horizontally_centered" translatable="false">Horizontally Centered</string>
    <string name="vertically_centered" translatable="false">Vertically\nCentered</string>
    <string name="centered" translatable="false">Centered</string>
    <string name="aligned_baseline" translatable="false">Aligned Baseline</string>
    <string name="login">Login</string>
    <string name="not_logged_in_status">You are not logged in.</string>
    <string name="logged_in_status">Hi 5, you just logged in without username and password.</string>
    <string name="logout">Logout</string>
    <string name="centered_in_sibling" translatable="false">Centered in Sibling</string>
    <string name="centered_in_parent" translatable="false">Centered in Parent</string>
    <string name="centered_in_edge_of_the_sibling" translatable="false">Centered in Sibling\'s Edge</string>
    <string name="japan_snow_monkey" translatable="false">Japan Snow Monkey</string>
    <string name="japan_snow_monkey_description" translatable="false">Japanese macaques, commonly known as snow monkeys, are found in the wild only in Japan.
        They live farther north than any other non-human primate. Like tanukis they are central characters in many folk tales and stories.\n\n

        There are an estimated 150,000 snow monkey living in Japan, a tenfold increase from the World War II era.
        They range from semi-tropical regions of islands south of Kyushu to the forests and mountains of northern Honshu.
        Hokkaido is too cold for the snow monkeys.
        Their ancestors are believed to have arrived from the Korean peninsula 500,000 to 300,000 years ago, long before the first humans arrived.
        They arrived mostly from the south and west and adapted to the climate and spread over time.\n\n

        The Japanese macaques living in Shimokita Peninsula in Aomori Prefecture in far northern Honshu are the northernmost population of monkeys in the world.
        Their numbers have increased 10-fold in the last 40 years. They are protected but widely regarded as pests.
        Monkeys that endure very cold weather are also found in the mountains of China.\n\n

        Humans have been fascinated with snow monkeys for some time. Representations of macaques have been found on prehistoric pottery.
        In folklore, such as the famous story about the monkey and the crab, monkeys are portrayed as clever thieves.\n\n

        Macaques are a kind of monkey that spends most of its time on the ground and has little use of its tail.
        There are about 60 different species and subspecies and they range from the Atlantic to the Pacific in Eurasia.\n\n

        David Attenborough wrote, \"The macaque is one of the most successful and versatile of all primates.
        If you wanted to pick a monkey that is bright, adaptable, versatile, resilient, enterprising,
        tough and capable of surviving in extreme conditions and taking on all comers, the macaque would win hands down.\"
    </string>
</resources>
